force-app/main/default/objects/Application__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On-Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Posting Closed</fullName>
            </value>
            <value>
                <fullName>Job Posting Fulfilled</fullName>
            </value>
            <value>
                <fullName>Job posting Cancelled</fullName>
            </value>
            <value>
                <fullName>Requested by Candidate</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>